# CommProtocol

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  SimpleWINserver.cpp  Update.docx  main.cpp
CommProto/include/CommProto/: commnode.h
CommProto/include/CommProto/architecture/: api.h  cond.h  macros.h  pipe_config.h  pipes.h  posix_pipes.h
CommProto/include/CommProto/architecture/connection/: serial-config_linux.h  serial-config_win32.h  serial_status.h  socket-config.h  transport_type.h
CommProto/include/CommProto/architecture/os/: comm_condvar.h  comm_monitor.h  comm_mutex.h  comm_thread.h  include_defines.h  os_mutex.h  os_threads.h  thread-config.h
CommProto/include/CommProto/console/: console.h  parse_engine.h  piping.h
CommProto/include/CommProto/constate/: connection_state.h
CommProto/include/CommProto/network/: seriallink.h
CommProto/include/CommProto/pkg/: packethashtable.h
CommProto/include/CommProto/tools/data_structures/: auto_queue.h  auto_vector.h  circle_linked_list.h  double_linked_list.h  linked_queue.h  rbtree.h  single_linked_list.h
CommProto/src/architecture/os/: os_mutex.cpp  os_threads.cpp
CommProto/src/constate/: connection_state.cpp
CommProto/src/hash/: ngcphash.cpp
CommProto/src/pkg/: packethashtable.cpp
OldCodes/Packets/ProtoPackets/: ProtoPacketsV2.pb.cc
Packets/ProtoPackets/: ProtoPacketsV2.pb.h
Protobuf/: CommProtocolBackend.cpp  ProtoPacketsV2.pb.cc  ProtoPacketsV2.pb.h  ProtoPacketsV2.proto  README.md  UNIXClient.cpp  UNIXServer.cpp  addStudent.cpp  readStudent.cpp  studentInfo.pb.cc  studentInfo.pb.h  studentInfo.proto
Servercodes/: Client.cpp  Instructions.docx  UNIXserver.cpp  client
Servercodes/backend/: NetworkGuide.docx  UNIXserver.cpp  WINserver.cpp  main
Servercodes/backend/Linux/: UNIXClient.cpp  UNIXServer.cpp  client  server
Servercodes/backend/UNIX/: UNIXServer.cpp
Servercodes/backend/Windows/: ProtoPackets.pb.cc  ProtoPackets.pb.h  ProtobufClient.cpp  ProtobufServer.cpp  README.md  WINClient.cpp  WINserver.cpp  main.cpp
Servercodes/backend/Windows/Protobuf/: BUILD  Makefile.am  Protobuf.podspec  WORKSPACE  appveyor.bat  configure.ac  generate_changelog.py  generate_descriptor_proto.sh  protobuf.bzl  tests.sh
Servercodes/backend/Windows/Protobuf/benchmarks/: Makefile.am  README.md
Servercodes/backend/Windows/Protobuf/benchmarks/java/: pom.xml
Servercodes/frontend/: README.md  Server.cpp  client-with-protobuf.js  client.js  server  tcp-server.js
Servercodes/frontend/general/: README.txt  general-client.js  general-server.js
Servercodes/frontend/protobuf/: README.txt  tcp-client.js  tcp-server.js
backend/: ArmCommandXbee.h  CMakeLists.txt  CommProtocolBackend.cpp  ProtoPacketsV2.pb.cc  ProtoPacketsV2.pb.h  UGVMessage.pb.cc  UGVMessage.pb.h  XbeeCallbacks.cpp  XbeeCallbacks.h
backend-relay/: CMakeLists.txt  CommProtocolBackendRelay.cpp
codes/: Server.cpp  general-server.js
libxbee3/: CMakeLists.txt  conn.c
poco-1.9/Net/lib/: PocoNetd.lib
tests/classes/cpp/xbee/: xbee_test.cc
(+15 files in other folders)
